--- a/index.html
+++ b/index.html
@@ -2,29 +2,30 @@
 <html>
   <head>
     <link rel="stylesheet" href="/css/style.css" />
-    <title>YOUR NAME</title>
+    <title>Sruthi R</title>
     <meta name="description" content="some desc">
   </head>
 
   <body>
     <header class="main-header">
       <br>
-      <h1 class="my-name my-name-large">YOUR NAME</h1>
+      <h1 class="my-name my-name-large">Sruthi R</h1>
     </header>
     <br><br><br>
     <section class="content-section container">
       <h2 class="section-header">About Me</h2>
       <img class="about-prof-image" src="/assets/profile.png" height="200" width="200">
-      <p> INTRODUCE YOURSELF
+      <p> Hi there, I am Sruthi
+
 
       </p>
 
       <p>
-        Relevant Info
+        I am a student at the University of Maryland
       </p>
 
       <p>
-        your interests
+        I love improving processes using software engineering!
       </p>
 
       <br><br><br><br><br><br><br><br><br><br><br>
