--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <br><br><br>
     <section class="content-section container">
       <h2 class="section-header">About Me</h2>
-      <img class="about-prof-image" src="/assets/profile.png" height="200" width="200">
+      <img class="about-prof-image" src="/assets/Professionalphoto.jpg" height="200" width="200">
       <p> Hi there, I am Sruthi
 
 
@@ -60,6 +60,5 @@
     <script type="text/javascript" src="/js/script.js"></script>  
   </body>
 	
-  
 
 </html>
