--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <br><br><br>
     <section class="content-section container">
       <h2 class="section-header">About Me</h2>
-      <img class="about-prof-image" src="/assets/Professionalphoto.jpg" height="200" width="150">
+      <img class="about-prof-image" src="/assets/Professionalphoto.jpg" height="200" width="200">
       <p> Hi there, I am Sruthi
 
 
@@ -36,13 +36,13 @@
         <ul class="nav footer-nav">
           <li>
             <!-- YOUR GITHUB -->
-            <a href="https://github.com/" target="_blank">
+            <a href="https://github.com/SR02019" target="_blank">
               <img class="sm-logo" src="/assets/githubwhite.png" height="50" width="50">
             </a>
           </li>
           <li>
             <!-- YOUR LINKEDIN -->
-            <a href="https://www.linkedin.com/" target="_blank">
+            <a href="https://www.linkedin.com/in/sruthi-rajarajan/" target="_blank">
               <img class="sm-logo" src="/assets/linkedinwhite.png" height="50" width="50">
 
             </a>
