--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Sruthi R</title>
     <meta name="description" content="some desc">
   </head>
@@ -14,7 +14,7 @@
     <br><br><br>
     <section class="content-section container">
       <h2 class="section-header">About Me</h2>
-      <img class="about-prof-image" src="/assets/Professionalphoto.jpg" height="200" width="200">
+      <img class="about-prof-image" src="./assets/Professionalphoto.jpg" height="200" width="200">
       <p> Hi there, I am Sruthi
 
 
@@ -37,19 +37,19 @@
           <li>
             <!-- YOUR GITHUB -->
             <a href="https://github.com/SR02019" target="_blank">
-              <img class="sm-logo" src="/assets/githubwhite.png" height="50" width="50">
+              <img class="sm-logo" src="./assets/githubwhite.png" height="50" width="50">
             </a>
           </li>
           <li>
             <!-- YOUR LINKEDIN -->
             <a href="https://www.linkedin.com/in/sruthi-rajarajan/" target="_blank">
-              <img class="sm-logo" src="/assets/linkedinwhite.png" height="50" width="50">
+              <img class="sm-logo" src="./assets/linkedinwhite.png" height="50" width="50">
 
             </a>
           </li>
           <li>
             <a href="https://www.cs.umd.edu/" target="_blank">
-              <img src="/assets/umd-logo.png" height="34" width="195">
+              <img src="./assets/umd-logo.png" height="34" width="195">
             </a>
           </li>
 
